name:                HostAndPort
version:             0.1.0.0
synopsis:            Parser host and port pairs like localhost:22
-- description:         
license:             MIT
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.HostAndPort
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       parsec >=3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
