name:                HostAndPort
version:             0.1.0
synopsis:            Parser host and port pairs like localhost:22
-- description:         
license:             MIT
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.HostAndPort
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       parsec >=3.1
  hs-source-dirs:      src
  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <4.8,
                       HostAndPort,
                       hspec

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing

source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-rcon.git
