name:                HostAndPort
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
homepage:            https://github.com/bacher09/hostandport
bug-reports:         https://github.com/bacher09/hostandport/issues
copyright:           (c) Slava Bacherikov 2015
category:            Network
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Parser host and port pairs like localhost:22

library
  exposed-modules:     Network.HostAndPort
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.5 && <5,
                       parsec >=3.1
  hs-source-dirs:      src
  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base >=4.5 && <5,
                       HostAndPort,
                       hspec

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing

source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-rcon.git
